--- a/Batch309/src/pages/DemoPage_1.page
+++ b/Batch309/src/pages/DemoPage_1.page
@@ -1,8 +1,7 @@
 <apex:page >
     <apex:pageBlock >
-    	This is demo page 
-        This is test page <br/>
-        This is a test page<br/>
-        This is a test page<br/>
+    	This is a demo page <br/>
+        This is a demo page <br/>
+        This is a demo page <br/>
     </apex:pageBlock>
 </apex:page>
